Aggiunta cognome nel paragrafo in corsivo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <h1>Hello World</h1>
     <hr>
-    <i>by Thubeesan, Class#50's student</i>
+    <i>by Thubeesan Kugathas, Class#50's student</i>
 
 </body>
 </html>
